[package]
name = "puzzles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candy"
path = "candy.rs"

[[bin]]
name = "jump_game"
path = "jump_game.rs"

[[bin]]
name = "jump_game2"
path = "jump_game2.rs"

[[bin]]
name = "longest_substring_without_repeating_characters"
path = "longest_substring_without_repeating_characters.rs"

[[bin]]
name = "skyline"
path = "skyline.rs"

[[bin]]
name = "trapping_rain_water"
path = "trapping_rain_water.rs"

[dependencies]
